@@ -1025,7 +1025,7 @@ void PMPI_Init_Wrapper (MPI_Fint *ierror)
 		Extrae_set_initial_TASKID (TASKID);
 		Extrae_set_is_initialized (EXTRAE_INITIALIZED_MPI_INIT);
 
-		if (config_file != NULL)
+		if (config_file != NULL && config_file[0] != '\0')
 			/* Obtain a localized copy *except for the master process* */
 			config_file = MPI_Distribute_XML_File (TASKID, Extrae_get_num_tasks(), config_file);
 
@@ -1143,7 +1143,7 @@ void PMPI_Init_thread_Wrapper (MPI_Fint *required, MPI_Fint *provided, MPI_Fint 
 		Extrae_set_initial_TASKID (TASKID);
 		Extrae_set_is_initialized (EXTRAE_INITIALIZED_MPI_INIT);
 
-		if (config_file != NULL)
+		if (config_file != NULL && config_file[0] != '\0')
 			/* Obtain a localized copy *except for the master process* */
 			config_file = MPI_Distribute_XML_File (TASKID, Extrae_get_num_tasks(), config_file);
 
@@ -2013,7 +2013,7 @@ int MPI_Init_C_Wrapper (int *argc, char ***argv)
 		Extrae_set_initial_TASKID (TASKID);
 		Extrae_set_is_initialized (EXTRAE_INITIALIZED_MPI_INIT);
 
-		if (config_file != NULL)
+		if (config_file != NULL && config_file[0] != '\0')
 			/* Obtain a localized copy *except for the master process* */
 			config_file = MPI_Distribute_XML_File (TASKID, Extrae_get_num_tasks(), config_file);
 
@@ -2129,7 +2129,7 @@ int MPI_Init_thread_C_Wrapper (int *argc, char ***argv, int required, int *provi
 		Extrae_set_initial_TASKID (TASKID);
 		Extrae_set_is_initialized (EXTRAE_INITIALIZED_MPI_INIT);
 
-		if (config_file != NULL)
+		if (config_file != NULL && config_file[0] != '\0')
 			/* Obtain a localized copy *except for the master process* */
 			config_file = MPI_Distribute_XML_File (TASKID, Extrae_get_num_tasks(), config_file);
 
@@ -3007,7 +3007,7 @@ void Extrae_MPI_prepareDirectoryStructures (int me, int world_size)
 			if (me == 0)
 				fprintf (stdout, PACKAGE_NAME": Temporal directory (%s) is private among processes.\n",
 				  Extrae_Get_TemporalDirNoTask());
-				Backend_createExtraeDirectory (me, TRUE);
+			Backend_createExtraeDirectory (me, TRUE);
 		}
 	
 		/* Now, wait for every process to reach this point, so directories are
